<resources>
    <string name="app_name">Q-Discounts</string>


    <string name="admob_key" translatable="false">ca-app-pub-3088072928401715~9022999270</string>
    <string name="ban_ad_id" translatable="false">ca-app-pub-3088072928401715/1402599206</string>
    <string name="ints_ad_id" translatable="false">ca-app-pub-3088072928401715/5562944297</string>
    <string name="rw_ad_id" translatable="false">ca-app-pub-3088072928401715/8955749618</string>
    <string name="native_ad_id" translatable="false">ca-app-pub-3940256099942544/2247696110</string>

    <!--    <string name="admob_key" translatable="false">ca-app-pub-3940256099942544~3347511713</string>-->
    <!--    <string name="ban_ad_id" translatable="false">ca-app-pub-3940256099942544/6300978111</string>-->
    <!--    <string name="ints_ad_id" translatable="false">ca-app-pub-3940256099942544/1033173712</string>-->
    <!--    <string name="rw_ad_id" translatable="false">ca-app-pub-3940256099942544/5224354917</string>-->
    <!--    <string name="native_ad_id" translatable="false">ca-app-pub-3940256099942544/2247696110</string>-->

    <string name="ent_your_number">Enter Your Number</string>
    <string name="ent_msg">We will send a code to verify your mobile number</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="continue1">Continue</string>
    <string name="submit">Submit</string>
    <string name="password">Password</string>
    <string name="email">Email Address</string>
    <string name="full_name">Full Name</string>
    <string name="profile_details">Profile Details</string>
    <string name="plz_ent_dt">Please Enter Details</string>
    <string name="change_pass">Change Password</string>
    <string name="old_pass">Old Password</string>
    <string name="new_pass">New Password</string>
    <string name="new_pass1">Re-Enter New Password</string>
    <string name="bank_details">Bank Details</string>
    <string name="plz_ent_bnk_dt">Enter details for withdrawing your money</string>
    <string name="acc_name">Account Name</string>
    <string name="accno">Account Number</string>
    <string name="ifsc">IFSC Code</string>
    <string name="update">Update</string>
    <string name="req_for_width">Request for Withdrawal</string>
    <string name="wallet">Wallet</string>
    <string name="refer_to_frnd">Refer to a Friend</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="transections">Transactions</string>
    <string name="logout">Logout</string>
    <string name="settings">Settings</string>
    <string name="user_settings">User Settings</string>
    <string name="other">Other</string>
    <string name="my_videos">My Videos</string>
    <string name="about_us">About Us</string>
    <string name="contact_us">Contact Us</string>
    <string name="term_an_con"><![CDATA[Terms & Conditions]]></string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="noti_key" translatable="false">AIzaSyDOjzvXmDJ_GSDF_cqNt46XDKRyaZkXz24</string>
    <string name="edit_error_msg">Please Enter</string>
    <string name="please_sel">Please Select</string>
    <string name="invalid_email">Invalid Email</string>
    <string name="invalid_mobile">Invalid Mobile Number</string>
    <string name="loading">Loading...</string>
    <string name="verification_field">Verification Failed</string>
    <string name="veryfication_code">Verification Code</string>
    <string name="new_pass_again">New Password Again</string>
    <string name="plz_ent_same_pass">Please enter same new Passwords</string>
    <string name="intr_msg">Please Connect to Internet</string>
    <string name="cant_play">Can\'t play this video</string>
    <string name="follow">Follow</string>
    <string name="unfollow">Unfollow</string>
    <string name="following">Following</string>
    <string name="follower">Follower</string>
    <string name="bank_name">Name of the Bank</string>
    <string name="intestrial">Intestrial</string>
    <string name="rew_vid">Rewarded Video</string>
    <string name="native_ad">Native</string>
    <string name="verify_profile">Please Verify Profile</string>
    <string name="daily_reward">Daily Reward</string>
    <string name="ref_code">Referal Code</string>
    <string name="enter_code">Offer Code</string>
    <string name="ref_reward">Referal Reward</string>
    <string name="ent_referal">Enter Referal Code</string>
    <string name="messages">Messages</string>
    <string name="kyc">KYC</string>
    <string name="instructions">Instuctions</string>
    <string name="exchange">Exchange</string>
    <string name="account">Account</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="offers">Offers</string>
    <string name="feedback">Feedback</string>
    <string name="logout_msg">Do you really want to Logout?</string>
    <string name="feedback_msg">Please give us your valuable feedback</string>
    <string name="offers_msg">See todays offer</string>
    <string name="change_pass_msg">Change Your Password Here</string>
    <string name="profile_msg">Update your details here</string>
    <string name="pick_location">Pickup Location</string>
    <string name="drop_loc">Drop Location</string>
    <string name="task_dt">Task Details</string>
    <string name="search">Search</string>
    <string name="title">Title</string>
    <string name="tags">Tags</string>
    <string name="price">Price</string>
    <string name="mrp">MRP</string>
    <string name="gst">GST</string>
    <string name="quantity">Quantity</string>
    <string name="details">Details</string>
    <string name="cart">Cart</string>
    <string name="punch_line">Good Food for Good Moments</string>
    <string name="orders">Orders</string>
    <string name="favorites">Favorites</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="add_new_address">Add New Address</string>
    <string name="address_line1">Address Line 1</string>
    <string name="address_line2">Address Line 2</string>
    <string name="city">City</string>
    <string name="state">State</string>
    <string name="country">Country</string>
    <string name="pincode">Pincode</string>
    <string name="contact_number">Contact Number</string>
    <string name="address">Address</string>
    <string name="checkout">Checkout</string>
    <string name="cod">Cash On Delivery</string>
    <string name="online1">Online Payment</string>
    <string name="order_id">Order No:</string>
    <string name="payment_st">Payment Status</string>
    <string name="update_st">Update Status</string>
    <string name="name">Name</string>
    <string name="dob">Date Of Birth</string>
    <string name="age">Age</string>
    <string name="assign_driver">Assign Driver</string>
    <string name="title_activity_maps">Map</string>
    <string name="track_driver">Track Driver</string>
    <string name="ok">Ok</string>
    <string name="add_to_cart">Add</string>
    <string name="add_to_cart1">Add To Cart</string>
    <string name="please_add_address">Please Add Address</string>
    <string name="delivery_charge">Delivery Charge</string>
    <string name="ent_referal_msg">If any offer will apply</string>
    <string name="or">Or</string>
    <string name="login">Login</string>
    <string name="offer_dis">Offer Discount</string>
    <string name="welcome">Welcome</string>
    <string name="nice_to_see">Nice to see you...</string>
    <string name="forgot_pass">Forgot Password?</string>
    <string name="click_here">Click Here</string>
    <string name="dont_have_account">Don\'t have account?</string>
    <string name="signup_Here">Signup Here</string>
    <string name="login_here">Login Here</string>
</resources>
