<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:background="@color/white"
    android:padding="@dimen/margin1"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/txt1"
        android:layout_width="wrap_content"
        android:text="@string/login_here"
        android:textColor="@color/black"
        android:fontFamily="@font/font2"
        android:textSize="@dimen/txt_size_xlg"
        android:layout_marginTop="@dimen/margin"
        android:includeFontPadding="false"
        android:layout_height="wrap_content"/>
    <TextView
        android:id="@+id/txt2"
        android:layout_width="wrap_content"
        android:text="lorem ipsome is the dummy content for shwing sj"
        android:layout_below="@id/txt1"
        android:fontFamily="@font/font1"
        android:layout_marginTop="@dimen/margin_lg"
        android:textColor="@color/dgry"
        android:lineSpacingExtra="@dimen/sizesm1"
        android:textSize="@dimen/txt_size_lg"
        android:layout_marginRight="@dimen/margin_xlg"
        android:includeFontPadding="false"
        android:layout_height="wrap_content"/>

    <RelativeLayout
        android:id="@+id/email_rl"
        android:layout_width="match_parent"
        android:layout_below="@id/txt2"
        android:layout_marginTop="@dimen/margin_xlg"
        android:paddingLeft="@dimen/margin1"
        android:paddingRight="@dimen/margin"
        android:background="@drawable/round_ract0"
        android:layout_height="@dimen/size62">

        <EditText
            android:id="@+id/et1"
            android:singleLine="true"
            android:background="@null"
            android:fontFamily="@font/font1"
            android:textStyle="bold"
            android:textSize="@dimen/txt_size_lg"
            android:includeFontPadding="false"
            android:textColor="@color/black"
            android:inputType="textEmailAddress"
            android:layout_centerVertical="true"
            android:hint="@string/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/password_rl"
        android:layout_width="match_parent"
        android:layout_below="@id/email_rl"
        android:layout_marginTop="@dimen/margin_md"
        android:paddingLeft="@dimen/margin1"
        android:paddingRight="@dimen/margin"
        android:background="@drawable/round_ract0"
        android:layout_height="@dimen/size62">

        <EditText
            android:id="@+id/et2"
            android:singleLine="true"
            android:background="@null"
            android:fontFamily="@font/font1"
            android:textStyle="bold"
            android:textSize="@dimen/txt_size_lg"
            android:includeFontPadding="false"
            android:textColor="@color/black"
            android:layout_marginLeft="@dimen/sizesm1"
            android:inputType="textPassword"
            android:layout_centerVertical="true"
            android:hint="@string/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/forogt_rl"
        android:layout_width="wrap_content"
        android:padding="@dimen/margin1"
        android:layout_alignParentRight="true"
        android:layout_below="@id/password_rl"
        android:layout_marginTop="@dimen/margin"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/txt3"
            android:layout_width="wrap_content"
            android:text="@string/forgot_pass"
            android:fontFamily="@font/font1"
            android:textColor="@color/dgry"
            android:layout_centerVertical="true"
            android:lineSpacingExtra="@dimen/sizesm1"
            android:textSize="@dimen/txt_size_md1"
            android:includeFontPadding="false"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/txt4"
            android:layout_width="wrap_content"
            android:text="@string/click_here"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@id/txt3"
            android:layout_marginLeft="@dimen/margin"
            android:onClick="ForgotNow"
            android:fontFamily="@font/font2"
            android:textColor="@color/app_color"
            android:lineSpacingExtra="@dimen/sizesm1"
            android:textSize="@dimen/txt_size_md1"
            android:includeFontPadding="false"
            android:layout_height="wrap_content"/>
    </RelativeLayout>
    <Button
        android:id="@+id/bt1"
        android:layout_width="match_parent"
        android:layout_below="@id/forogt_rl"
        android:layout_marginTop="@dimen/margin_lg"
        android:layout_marginBottom="@dimen/margin_md"
        android:background="@drawable/bt_bg"
        android:fontFamily="@font/font2"
        android:textColor="@color/white"
        android:includeFontPadding="false"
        android:textAllCaps="false"
        android:onClick="NextNow"
        android:textSize="@dimen/txt_size_lg"
        android:text="@string/continue1"
        android:backgroundTint="@color/app_color"
        android:layout_height="@dimen/size62"/>
    <RelativeLayout
        android:layout_width="wrap_content"
        android:padding="@dimen/margin1"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/bt1"
        android:layout_marginTop="@dimen/margin_xlg"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/txt31"
            android:layout_width="wrap_content"
            android:text="@string/dont_have_account"
            android:fontFamily="@font/font1"
            android:textColor="@color/dgry"
            android:layout_centerVertical="true"
            android:lineSpacingExtra="@dimen/sizesm1"
            android:textSize="@dimen/txt_size_lg"
            android:includeFontPadding="false"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/txt41"
            android:layout_width="wrap_content"
            android:onClick="SignUpNow"
            android:text="@string/signup_Here"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@id/txt31"
            android:layout_marginLeft="@dimen/margin"
            android:fontFamily="@font/font2"
            android:textColor="@color/app_color"
            android:lineSpacingExtra="@dimen/sizesm1"
            android:textSize="@dimen/txt_size_lg"
            android:includeFontPadding="false"
            android:layout_height="wrap_content"/>
    </RelativeLayout>
</RelativeLayout>