<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:background="@color/white"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <include
        android:id="@+id/tool"
        layout="@layout/my_tool1"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:paddingBottom="@dimen/margin"
        android:paddingTop="@dimen/margin"
        android:layout_alignParentBottom="true"

        android:paddingLeft="@dimen/margin1"
        android:paddingRight="@dimen/margin1"

        android:layout_marginTop="@dimen/size7"
        android:layout_height="match_parent">
        <TextView
            android:id="@+id/txt1"
            android:layout_width="wrap_content"
            android:text="@string/bank_details"
            android:textColor="@color/black"
            android:fontFamily="@font/font2"
            android:textSize="@dimen/txt_size_xlg"
            android:layout_marginTop="@dimen/margin_md"
            android:includeFontPadding="false"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/txt2"
            android:layout_width="wrap_content"
            android:text="@string/plz_ent_bnk_dt"
            android:layout_below="@id/txt1"
            android:fontFamily="@font/font1"
            android:layout_marginTop="@dimen/margin1"
            android:textColor="@color/dgry"
            android:lineSpacingExtra="@dimen/sizesm1"
            android:textSize="@dimen/txt_size_lg"
            android:layout_marginRight="@dimen/margin_xlg"
            android:includeFontPadding="false"
            android:layout_height="wrap_content"/>

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_below="@id/txt2"

            android:layout_marginTop="@dimen/margin_xlg"
            android:layout_height="match_parent">
            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:layout_height="match_parent">
            <RelativeLayout
                android:layout_width="match_parent"
                android:paddingLeft="@dimen/margin1"
                android:paddingRight="@dimen/margin"
                android:layout_marginTop="@dimen/margin_lg"
                android:background="@drawable/round_ract0"
                android:layout_height="@dimen/size62">

                <EditText
                    android:id="@+id/et1"
                    android:singleLine="true"
                    android:background="@null"
                    android:fontFamily="@font/font1"
                    android:textStyle="bold"
                    android:textSize="@dimen/txt_size_lg"
                    android:includeFontPadding="false"
                    android:textColor="@color/black"
                    android:layout_marginLeft="@dimen/sizesm1"
                    android:inputType="text"
                    android:layout_centerVertical="true"
                    android:hint="@string/acc_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </RelativeLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:paddingLeft="@dimen/margin1"
                android:paddingRight="@dimen/margin"
                android:layout_marginTop="@dimen/margin_lg"
                android:background="@drawable/round_ract0"
                android:layout_height="@dimen/size62">

                <EditText
                    android:id="@+id/et2"
                    android:singleLine="true"
                    android:background="@null"
                    android:fontFamily="@font/font1"
                    android:textStyle="bold"
                    android:textSize="@dimen/txt_size_lg"
                    android:textColor="@color/black"
                    android:includeFontPadding="false"
                    android:layout_marginLeft="@dimen/sizesm1"
                    android:inputType="text"
                    android:layout_centerVertical="true"
                    android:hint="@string/accno"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </RelativeLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:paddingLeft="@dimen/margin1"
                android:paddingRight="@dimen/margin"
                android:layout_marginTop="@dimen/margin_lg"
                android:background="@drawable/round_ract0"
                android:layout_height="@dimen/size62">

                <EditText
                    android:id="@+id/et3"
                    android:singleLine="true"
                    android:background="@null"
                    android:fontFamily="@font/font1"
                    android:textStyle="bold"
                    android:textSize="@dimen/txt_size_lg"
                    android:textColor="@color/black"
                    android:layout_marginLeft="@dimen/sizesm1"
                    android:inputType="text"
                    android:includeFontPadding="false"
                    android:layout_centerVertical="true"

                    android:hint="@string/ifsc"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </RelativeLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:paddingLeft="@dimen/margin1"
                android:paddingRight="@dimen/margin"
                android:layout_marginTop="@dimen/margin_lg"
                android:background="@drawable/round_ract0"
                android:layout_height="@dimen/size62">

                <EditText
                    android:id="@+id/et4"
                    android:singleLine="true"
                    android:background="@null"
                    android:fontFamily="@font/font1"
                    android:textStyle="bold"
                    android:textSize="@dimen/txt_size_lg"
                    android:textColor="@color/black"
                    android:layout_marginLeft="@dimen/sizesm1"
                    android:inputType="text"
                    android:includeFontPadding="false"
                    android:layout_centerVertical="true"

                    android:hint="@string/bank_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </RelativeLayout>
                <Button
                    android:id="@+id/bt1"
                    android:layout_width="match_parent"
                    android:background="@drawable/bt_bg"
                    android:fontFamily="@font/font2"
                    android:textColor="@color/white"
                    android:layout_marginTop="@dimen/margin_lg"
                    android:includeFontPadding="false"
                    android:textAllCaps="false"
                    android:onClick="NextNow"
                    android:textSize="@dimen/txt_size_lg"
                    android:text="@string/update"
                    android:backgroundTint="@color/app_color"
                    android:layout_height="@dimen/size62"/>
            </LinearLayout>
        </androidx.core.widget.NestedScrollView>
    </RelativeLayout>
</RelativeLayout>